# lib/api-spec/openapi.yaml
@@ -178,16 +178,16 @@ components:
         projectType:
           type: string
           enum:
-            - general-construction
-            - handyman
-            - remodeling
-            - roofing
-            - painting
-            - flooring
-            - electrical
+            - kitchen-remodeling
+            - drywall
             - plumbing
-            - landscaping
-            - other
+            - electrical
+            - flooring
+            - fireplace
+            - basement
+            - painting
+            - remodeling
+            - handyman
         location:
           type: string
           minLength: 2
